# gaft

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  README.rst  ga_engine.py  requirements.txt  setup.cfg  setup.py
examples/: 1D_optimization_example.ipynb  best_fit.py  ex01.py  plot_envolution_curve.py
examples/ex01/: best_fit.py  ex01.py  plot_animation.py  plot_envolution_curve.py
examples/ex02/: best_fit.py  ex02.py  plot_envolution_curve.py  plot_surf.py
gaft/: __init__.py  engine.py  mpiutil.py
gaft/analysis/: __init__.py  console_output.py  fitness_store.py
gaft/components/: __init__.py  binary_individual.py  decimal_individual.py  individual.py  population.py
gaft/operators/: __init__.py
gaft/plugin_interfaces/: analysis.py  metaclasses.py
gaft/tests/: dynamic_linear_scaling_test.py  engine_test.py  exponential_ranking_selection_test.py  flip_bit_big_mutation_test.py  flip_bit_mutation_test.py  individual_test.py  test_all.py  (+3 more)
gapy/: __init__.py  engine.py  ga_engine.py
gasol/: CMakeLists.txt  README.md
gasol/example/: 1d_search.cpp  CMakeLists.txt
gasol/src/: CMakeLists.txt  crossover.cpp  crossover.h  engine.cpp  engine.h  individual.cpp  individual.h  mpih.h  mpiutils.cpp  mpiutils.h  mutation.cpp  mutation.h  population.cpp  population.h  selection.cpp  selection.h
gasol/unittest/: CMakeLists.txt  crossover_test.cpp  engine_test.cpp  gasol_test.cpp  individual_test.cpp  mpiutils_test.cpp  mutation_test.cpp  population_test.cpp  selection_test.cpp
tests/: dynamic_linear_scaling_test.py  engine_test.py  exponential_ranking_selection_test.py  flip_bit_big_mutation_test.py  flip_bit_mutation_test.py  gaft_test.py  gapy_test.py  individual_test.py  linear_ranking_selection_test.py  linear_scaling_test.py  mpiutil_test.py  population_test.py  roulette_wheel_selection_test.py  tournament_selection_test.py  uniform_crossover_test.py
(+40 files in other folders)
